--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "editor.md": "^1.5.0",
     "node-sass": "^6.0.1",
     "nodemon": "^2.0.12"
   },
